                            Changelog for EtherApe

  Overview of changes in EtherApe 0.9.19 ():

   This is primarily a bugfix release, but thanks to AlexL adds also a Russian
   translation.

   Changes summary:
     * better sizing of connections lines, thanks to Ronald Henderson.
     * fix for ui crash by "MandatoryField"
     * russian translation and fixes by AlexL

  Overview of changes in EtherApe 0.9.18 (Sunday, June 3, 2018):

   EtherApe now is a pure GTK 3 application, with canvas supplied by GooCanvas
   (https://wiki.gnome.org/Projects/GooCanvas).

   While GooCanvas itself is in maintenance mode, is still the simpler canvas
   library available and with an API almost identical to gnome-canvas, too!
   Longer term, EtherApe ui should be completely redesigned and modernized,
   but this is for another day.

   Changes summary:
     * EtherApe ported to GTK3 using GooCanvas instead of the obsolete
       GnomeCanvas. 


  Overview of changes in EtherApe 0.9.17 (Thursday, April 5, 2018):

   This is a bugfix release, because a bug made 0.9.16 still runtime-dependent
   on gnomeui and other gnome 2 libraries.
 
   Changes summary:
     * EtherApe now requires Gtk 2.24
     
     * fixed a bug making libglade load gnome2 libraries
     
     * Sometimes node/links windows were freezing.


  Overview of changes in EtherApe 0.9.16 (Sunday, January 14, 2018):

   Several distributions are phasing out Gnome 2 libraries and EtherApe needs
   to update as well.
   Unfortunately, this mean dropping support for older distributions, for
   example CENTOS 5 and 6. At this time the EtherApe executable can still be
   built for those distributions, but not the project as a whole.
   
   This is an interim release, where the only Gnome 2 component is
   gnome-canvas. Apart of that, EtherApe is now a GTK2 application.
      Work is underway to replace gnome-canvas with another component.
   Documentation is now based on yelp-tools instead of Scroolkeeper/Rarian.
